<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="start"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            GET TEXT
            <TextView
                android:id="@+id/tv_item_judul_buku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="95dp"
                android:gravity="start"
                android:text="@string/judul_buku"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

            <TextView
                android:id="@+id/tv_item_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="95dp"
                android:gravity="start"
                android:text="@string/harga_buku"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_judul_buku"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/tv_item_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="95dp"
                android:gravity="start"
                android:text="@string/deskripsi_buku"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_harga" />

            VIEW TAG
            <TextView
                android:id="@+id/tv_buku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/judul"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/harga"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_judul_buku" />

            <TextView
                android:id="@+id/tv_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:text="@string/deskripsi_buku"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_harga" />

            TITIK DUA
            <TextView
                android:id="@+id/tv_titikdua_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="83dp"
                android:gravity="start"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

            <TextView
                android:id="@+id/tv_titikdua_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="83dp"
                android:gravity="start"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_judul_buku" />

            <TextView
                android:id="@+id/tv_titikdua_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="83dp"
                android:gravity="start"
                android:text="@string/titikdua"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_item_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_harga" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>